PROD-2935: fix scroll overflow

--- a/src/components/contacts/Contact.scss
+++ b/src/components/contacts/Contact.scss
@@ -52,6 +52,7 @@
 .menu_list {
   width: 100%;
   height: 100%;
+  height: -webkit-fill-available;
   overflow: scroll;
   margin-top: 0;
   transition: ease-in-out 0.1s;
